static/css/base.css
/* ... */
.primary-filter-info p{
  position: relative;
  left:20px;
  font-size: 1rem;
  width:90%;
  padding: 10px;
}


.location-header-2{
  display:none;
}

#location-header-2{
  font-family: var(--main-font);
  color:var(--main-text-color);
  background-color: #f7f7f7;
  width:200px;
  padding: 5px;
  position: absolute;
  left:950px;
  bottom:100px;
  border-radius: 10px;
  text-align: center;
}

.half-hero{
  height:520px;
  width:100%;
  opacity: 0.7;
  /* border-radius: 20px; */
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom-left-radius: 45%;
  border-bottom-right-radius: 45%;
  /* margin-top: 30px; */
  position:relative;
  right:20;
  left:0;
  z-index: 0;
  top:-100px;
  background-size: cover;
  object-fit: cover;
  /* image-rendering: pixelated; */
}

.hero-message, .scroll-down-hero-message{
  /* position:absolute; */
  top: 40%;
  text-align: center;
  border-radius: 10px;
  font-family: Playfair Display;
  font-style: italic;
}

.hero-message{
  color:var(--main-text-color);
  font-weight:800;
  width:600px;
  position: absolute;
  top: -60px;
  left: 30%;
  /* background-color: rgba(112, 112, 112, 0.1); */
}

.fypg{
  background-color: rgba(255, 255, 255, 0.8);
  padding:10px 20px;
  border-radius: 999999999px;
}

.scroll-down-hero-message{
  color:#fff;
}

.new-hero-message{
  animation: fade-out 1s;
  
}

@keyframes fade-out {
  0%{
    display: block;
  }
  50%{
    display: none;
  }
}

.hero-message h2{
  font-size: 3rem;
}

.scroll-down-hero-message h2{
  font-size: 4rem;
}

.scroll-down-hero-message h3{
  font-size: 2rem;
}


.picture-trans{
  position: relative;
  z-index: -1;
  width:100%;
  height:300px;
  /* opacity: 0.1; */
  background-color: transparent;
}

.center-image{
  position: fixed;
  top:0;
  /* left:2.5%; */
  z-index: -3;
  background-attachment:fixed;
  background-size:contain;
  background-repeat: no-repeat;
  width:100%;
  height:100vh;
}

.scroll-down-hero-message{
  position: fixed;
  width:800px;
  animation: slide-across 7s infinite;
  /* transform: skewY(20deg); */
}

@keyframes slide-across {
  0%{
    left:0px
  }
  50%{
    left:600px;
    /* transform: skewX(10deg); */
    background-color:#fff;
    color:var(--main-text-color);
  }
  100%{
    left: 0px;
  }
}

.homepage-paragragh-hr{
  width: 60%;
  align-self: center;
  border: solid rgba(112, 112, 112, 0.3) 0.3px;
  margin-bottom:0 !important;
}

.featured-rentals{
  font-family: var(--main-font);
  background-color: #fff;
  width:100%;
  position: relative;
  bottom: -150px;
  border-top-left-radius: 40%;
  border-top-right-radius: 40%;
  /* border-top: 5px solid var(--main-text-color); */
  height:500px;
  padding-top: 40px;
}

.featured-rentals h4{
  font-size: 2rem;
  color:var(--main-text-color);
  margin-top: 20px;
  text-align: center;
}

.homepage-paragragh-box{
  position:relative;
  overflow:hidden;
  display:flex;
  flex-direction: column;
  width:80%;
  margin: 20px;
  padding: 50px;
  text-align:justify;
  border-radius:20px;
}

.homepage-paragragh-box h5{
  text-align: center;
  font-size: 1.3rem;
  padding-bottom: 5px;
}

.homepage-paragragh-image{
  position:absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
  object-fit: cover;
  z-index: 1;
  border-radius:20px;
}

.image-cover{
  position:absolute;
  top:0;
  left:0;
  z-index: 2;
  height:100%;
  width: 100%;
  background-color:rgba(117, 187, 167, 0.5);
  border-radius:20px;
}

.content-overlay {
    position: absolute;
    z-index: 3;
    right:18px;
    border-radius:15px;
    /* color:#fff; */
    width:90%;
    background-color:rgba(255, 255, 255, 0.7);
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.content-overlay p,
.content-overlay em{
  font-weight: 700;
}

.featured-sub-header{
  margin:20px;
}

.price-tag{
  margin-top: 10px;
  margin-left: 80px;;
}

/* styles to customise jQuery date picker */

table{
  font-family: var(--main-font);
}

thead{
  background-color: var(--main-background-color);
}


.ui-datepicker-header{
  font-family: var(--main-font);
  color:var(--main-text-color) !important;
  background-color: #fff !important;
  height:30px;
  border-radius: 10px;
  border:none !important;
  width:200px;
  align-items: center !important;
  margin-left:120px;
}

.ui-datepicker-header, .ui-widget-header, .ui-helper-clearfix, .ui-corner-all{
  height:40px;
  border-radius: 10px;
}

.ui-icon{
  display:none !important;
}

.ui-icon-circle-triangle-e{
  color:red !important;
}

.ui-datepicker-prev{
  width: 50px;
	height: 0;
	border-top: 13px solid transparent;
	border-right: 8px solid #555;
	border-bottom: 13px solid transparent;

}

.ui-datepicker-next{
  width: 50px;
	height: 0;
	border-top: 13px solid transparent;
	border-left: 8px solid #555;
	border-bottom: 13px solid transparent;
}

.ui-datepicker-prev-hover,
.ui-datepicker-next-hover,
.ui-state-hover{
  background-color:rgba(117, 187, 167, 0.8) !important;
  border:none !important;
}

.ui-state-active{
  color:rgba(117, 187, 167, 0.8) !important;
}

#ui-datepicker-div{
  width:500px;
  height:420px;
  border:1px solid #fff !important;
  box-shadow: 2px 2px 2px 2px #f6f6f6 !important;
  border-radius: 10px;
  padding:10px;
  background-color: #fff;
  margin-top: 10px;
}

#ui-datepicker-div td{
  border: solid 1px rgba(117, 187, 167, 0.3) !important;
  border-radius:5px;
}



.ui-state-highlight, .ui-widget-content .ui-state-highlight{
  background: var(--main-text-color) !important;
  border:1px solid white !important;
  color: white !important;
  height:50px;
  width:50px;
  border-radius: 10px;
}

.ui-state-default{
  /* background: var(--main-background-color) !important; */
  background: #fff !important;
  height:50px !important;
  width:50px !important;
  text-align: center !important;
  padding: 12px !important;
  /* border-radius: 10px; */
  border:none !important;
  margin:0;
}
/* ... */

